[tool.poetry]
name = "genrer"
version = "0.1.0"
description = "Update the genres of your tracks powered by last.fm"
authors = ["leo <fmleonardo@protonmail.com>"]
readme = "README.md"
packages = [{include = "genrer"}]

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
requests = "^2.28.1"
eyed3 = "^0.9.7"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
